--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,21 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+/* エンドユーザ側 */
+.login_contents {
+  margin-bottom: 50px;
+}
+
+.signup_contents_name {
+  margin-bottom: 10px;
+}
+
+.signup_contents {
+  margin-bottom: 20px;
+}
+
+/* 管理者側　*/
+.administrator_login_contents {
+  margin-bottom: 20px;
+}
