--- a/app/views/end_users/shared/_links.html.erb
+++ b/app/views/end_users/shared/_links.html.erb
@@ -3,9 +3,11 @@
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+  <%= link_to "hogehogeアカウントを新規作成", new_registration_path(resource_name), :class=>"btn btn-primary" %><br />
 <% end %>
 
+<% if false %>
+<%# 以下内容コメントアウトしています　%>
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
   <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
 <% end %>
@@ -22,4 +24,6 @@
   <%- resource_class.omniauth_providers.each do |provider| %>
     <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %><br />
   <% end %>
+<% end %>
+
 <% end %>
