modified header footer

--- a/app/views/shared/_header_admin_after_login.html.erb
+++ b/app/views/shared/_header_admin_after_login.html.erb
@@ -15,7 +15,7 @@
 					<%= link_to "ユーザー一覧", "#" %>  <!-- リンク先直す -->
 				</div>
 				<div class="col-xs-4">
-					<%= link_to "ログアウト", "#" %>  <!-- リンク先直す -->
+					<%= link_to "ログアウト", destroy_administrator_session_path, method: :delete %>  <!-- リンク先直す -->
 				</div>
 			</div>
 		</div>
