--- a/app/views/shared/_header_user_after_login.html.erb
+++ b/app/views/shared/_header_user_after_login.html.erb
@@ -21,7 +21,7 @@
 						<%= link_to "カート", "#" %>   <!-- リンク先直す　　カート表示追加する -->
 					</div>
 					<div class="col-xs-3">
-						<%= link_to "ログアウト", "#" %>  <!-- リンク先直す -->
+						<%= link_to "ログアウト", destroy_endùser_session_path, method: :delete %>  <!-- リンク先直す -->
 					</div>
 				</div>
 			</div>
