--- a/app/views/shared/_header_user_before_login.html.erb
+++ b/app/views/shared/_header_user_before_login.html.erb
@@ -8,10 +8,10 @@
 			<div class="row col-xs-6 d-inline-block"></div>
 			<div class="row col-xs-4 d-inline-block">
 				<div class="col-xs-4">
-					<%= link_to "新規登録", "#" %>   <!-- パスを直す -->
+					<%= link_to "新規登録", new_end_user_registration_path %>   <!-- パスを直す -->
 				</div>
 				<div class="col-xs-4">
-					<%= link_to "ログイン", "#" %>  <!-- パスを直す -->
+					<%= link_to "ログイン", new_end_user_session_path %>  <!-- パスを直す -->
 				</div>
 			</div>
 	</div>
