--- a/app/views/admin_order_histories/admin_index.html.erb
+++ b/app/views/admin_order_histories/admin_index.html.erb
@@ -1,5 +1,5 @@
 <!-- ヘッダー -->
-<%= render 'shared/header_user_after_login' %>
+<%= render 'shared/header_user_before_login' %>
 
 <!-- ナビゲーション -->
 <div class="container">
@@ -135,7 +135,7 @@
 </div>
 
 <!-- フッター -->
-<%= render 'shared/footer_admin' %>
+<%= render 'shared/footer_user' %>
 
 
 
