--- a/app/views/shared/_footer_admin.html.erb
+++ b/app/views/shared/_footer_admin.html.erb
@@ -1,11 +1,10 @@
 <meta charset="utf-8">
 <footer>
-	<div class=" container">
+	<div class=" container-fluid">
 		<div class="row">
 			<div class="col-xs-4"></div>
 			<div class="col-xs-4">
-				<h3>hoge</h3>
-				<h3>hoge</h3>
+				<%= link_to image_tag('logo.png', :size => '200x100'), root_path %> <!-- ロゴ表示 -->
 			</div>
 	    </div>
 </footer>
