--- a/app/views/shared/_header_admin_before_login.html.erb
+++ b/app/views/shared/_header_admin_before_login.html.erb
@@ -1,9 +1,8 @@
 <meta charset=utf-8>
 <header>
-	<div class="container border-bottom">
+	<div class="container-fluid border-bottom">
 		<div class="row">
-			<h2>hoge</h2>
-			<h2>hoge</h2>
+			<%= link_to image_tag('logo.png', :size => '200x100'), root_path %> <!-- ロゴ表示 -->
 		</div>
 		</div>
 </header><!-- /header -->
