--- a/app/views/shared/_header_user_before_login.html.erb
+++ b/app/views/shared/_header_user_before_login.html.erb
@@ -1,17 +1,18 @@
 <meta charset=utf-8>
 <header>
-	<div class="container border-bottom">
-		<div class="row col-xs-2 d-inline-block">
-				<h2>hoge</h2>     <!-- アイコン表示調べる -->
-				<h2>hoge</h2>
+	<div class="container-fluid border-bottom">
+		<div class="row col-xs-4">
+				<%= link_to image_tag('logo.png', :size => '200x100'), root_path %> <!-- ロゴ表示 -->
 			</div>
-			<div class="row col-xs-6 d-inline-block"></div>
-			<div class="row col-xs-4 d-inline-block">
-				<div class="col-xs-4">
-					<%= link_to "新規登録", new_end_user_registration_path %>   <!-- パスを直す -->
-				</div>
-				<div class="col-xs-4">
-					<%= link_to "ログイン", new_end_user_session_path %>  <!-- パスを直す -->
+			<div class="col-xs-4">検索窓</div>
+			<div class="col-xs-4">
+				<div class="row">
+				  <div class="col-xs-6 center-block">
+					 <%= link_to "新規登録", new_end_user_registration_path %>
+				  </div>
+				  <div class="col-xs-6">
+					 <%= link_to "ログイン", new_end_user_session_path %>
+				  </div>
 				</div>
 			</div>
 	</div>
