--- a/app/views/shared/_header_admin_after_login.html.erb
+++ b/app/views/shared/_header_admin_after_login.html.erb
@@ -4,11 +4,12 @@
 		<div class="col-xs-3">
 			<%= link_to image_tag('logo.png', :size => '150x100'), root_path %>
 		</div>
-		<div class="col-xs-4">
-			<div class="col-xs-offset-1">検索機能</div>
+		<div class="row col-xs-4">
+			<div class="row col-xs-4">aaaa</div>
+			<div class="row col-xs-4">zzzzz</div>
 		</div>
-		<div class="row col-xs-7">
-			<div>aaaa</div>
+		<div class="col-xs-5">
+			
 		</div>
     </div>
 </header>
