--- a/app/views/admin_order_histories/admin_index.html.erb
+++ b/app/views/admin_order_histories/admin_index.html.erb
@@ -19,6 +19,9 @@
   </ul>
 </div>
 <!-- タブの中身 -->
+<!-- 全体 -->
+<% @order_histories.each  do |order| %>
+
 <div class="tab-content">
 	<div class="tab-pane fade in active" id="all">
 	  <div class="container">
@@ -26,15 +29,15 @@
               <tbody>
                 <tr>
                    <th scope="row">購入者名</th>
-                   <td>サンプル太郎</td>
+                   <td><%= order.name %></td>
                 </tr>
                 <tr>
                    <th scope="row">購入日時</th>
-                   <td>2019年9月15日17時30分</td>
+                   <td><%= order.created_at %></td>
                 </tr>
                 <tr>
                    <th scope="row">購入内容</th>
-                   <td>サンプルミュージック</td>
+                   <td>aaa</td>
                 </tr>
                 <tr>
                    <th scope="row">送付先</th>
@@ -42,23 +45,28 @@
                 </tr>
                 <tr>
                    <th rowspan="2">ステータス</th>
-                   <td rowspan="2">受付中</td>
+                   <td rowspan="2"><%= order.order_status %></td>
                 </tr>
                </tbody>
            </table>
       </div>
 　  </div>
+<% end %>
+<!-- 受付 -->
+<% @order_histories.each  do |order| %>
+<% if order_histories.order_status == 受付中 %>
+
   <div class="tab-pane fade" id="accepting">
     <div class="container">
           <table class="table">
             <tbody>
                 <tr>
                    <th scope="row">購入者名</th>
-                   <td>サンプル太郎accepting</td>
+                   <td></td>
                 </tr>
                 <tr>
                    <th scope="row">購入日時</th>
-                   <td>2019年9月15日17時30分</td>
+                   <td></td>
                 </tr>
                 <tr>
                    <th scope="row">購入内容</th>
@@ -76,6 +84,11 @@
           </table>
     </div>
 　</div>
+<% end %>
+<!-- 出荷準備中 -->
+<% @order_histories.each  do |order| %>
+<% if order_histories.order_status == 出荷準備中 %>
+
   <div class="tab-pane fade" id="preparing">
       <div class="container">
            <table class="table">
@@ -104,6 +117,10 @@
            </table>
     </div>
 　</div>
+<% end %>
+<!-- 出荷済 -->
+<% @order_histories.each  do |order| %>
+<% if order_histories.order_status == 出荷済み %>
   <div class="tab-pane fade" id="finished">
     <div class="container">
            <table class="table">
@@ -126,12 +143,13 @@
                 </tr>
                 <tr>
                    <th rowspan="2">ステータス</th>
-                   <td rowspan="2">受付中</td>
+                   <td rowspan="2"></td>
                 </tr>
                </tbody>
            </table>
     </div>
 　</div>
+<% end %>
 </div>
 
 <!-- フッター -->
