order_history_new order_histroy_confirm implementation

--- a/app/views/order_histories/thanks.html.erb
+++ b/app/views/order_histories/thanks.html.erb
@@ -1,2 +1,5 @@
-<h1>OrderHistories#thanks</h1>
-<p>Find me in app/views/order_histories/thanks.html.erb</p>
+<p>ご注文ありがとうございます！</p>
+<p>商品到着まで今しばらくお待ちください!!</p>
+
+<%= link_to "TOPへ戻る" root_path %>
+<%= link_to "マイページへ" "/users/1", %>
