--- a/app/views/order_histories/new.html.erb
+++ b/app/views/order_histories/new.html.erb
@@ -1,4 +1,5 @@
 
+
 <h1>ご注文内容の確認</h1>
 
 <% @cart_items.each do |cart_item| %>
@@ -8,57 +9,84 @@
 
 <p>数量　<%= cart_item.product_number %></p>
 
-<p>価格　¥<%= @item_unit_price %>(税込)</p>
+<div>
+  <select name=“数量” required>
+    <option value="cart_item.product_number" selected><%= cart_item.product_number %></option>
+    <option value="1">1</option>
+    <option value="2">2</option>
+    <option value=“3”>3</option>
+    <option value="4">4</option>
+    <option value=“5”>5</option>
+    <option value="6">6</option>
+    <option value=“7”>7</option>
+    <option value="8">8</option>
+    <option value=“9”>9</option>
+    <option value="10">10</option>
+  </select>
+</div>
+
+
+
+<p>価格　¥<%= cart_item.product.price * cart_item.product_number * 1.08 %>(税込)</p>
+
+
 
 <% end %>
+
+<%= form_with url: order_histories_confirm_path, local: true do |order_history| %>
 
 <h1>配送先</h1>
-<% @end_user.addresses.each do |address| %>
-<%= address.last_name %>
-<%= address.first_name %>
-<p>電話番号</p>
-<%= address.telephone_number %>
-<%= address.postal_code_1 %> - <%= address.postal_code_2 %>
-<%= address.address %>
+<div class="field" style="width: 800px;">
 
-<% end %>
+  <% @end_user.addresses.each do |ad| %>
+  <div>
+    <%= order_history.radio_button :order_histories_address, ad.id %>
+    <%= ad.address %>
+    <%= ad.last_name %>
+    <%= ad.first_name %>
+    <%= ad.telephone_number %>
+    <%= ad. postal_code_1 %>
+    <%= ad. postal_code_2 %>
+  </div>
+  <% end %>
 
-<% form_for (@order_history) do |order_history| %>
-<div class="form-group">
-  <label>姓</label>
-  <%= order_history.text_field :last_name_kanji, class:"form-control" %>
-  <label>名</label>
-  <%= order_history.text_field :first_name_kanji, class:"form-control" %>
+
+  <label><%= order_history.radio_button :order_histories_address, 'new' %></label>
+
+    <label>姓</label>
+    <%= order_history.text_field :last_name_kanji, class:"form-control" %>
+    <label>名</label>
+    <%= order_history.text_field :first_name_kanji, class:"form-control" %>
+    <label>電話番号</label>
+    <%= order_history.text_field :telephone_number, class:"form-control" %>
+    <label>郵便番号</label>
+    <%= order_history.text_field :postal_code_1, class:"form-control" %>-<%= order_history.text_field :postal_code_2, class:"form-control" %>
+
+    <label>住所</label><%= order_history.text_area :address, class:"form-control", row:"5" %>
+
 </div>
 
-<div class="form-group">
-  <label>電話番号</label>
-  <%= order_history.text_field :telephone_number, class:"form-control" %>
-</div>
 
-<div class="form-group">
-  <label>郵便番号</label>
-  <%= order_history.text_field :postal_code_1, class:"form-control" %>
-  <%= order_history.text_field :postal_code_2, class:"form-control" %>
-</div>
-
-<div class="form-group">
-  <label>住所</label>
-  <%= order_history.text_area :address, class:"form-control", row:"5" %>
-</div>
-
-<div class="form-group">
   <label>
-  <%= order_history.radio_button :pay_method, "銀行振込" %>
+  <%= order_history.radio_button :pay_method, "銀行振込" %>銀行振込
   </label>
   <label>
-  <%= order_history.radio_button :pay_method, "クレジットカード" %>
+  <%= order_history.radio_button :pay_method, "クレジットカード" %>クレジットカード
   </label>
   <label>
-  <%= order_history.radio_button :pay_method, "代金引換" %>
+  <%= order_history.radio_button :pay_method, "代金引換" %>代金引換
   </label>
-</div>
 
-<% end %>
 
 <p>商品の小計</p>
+<% @subtotal = 0 %>
+<% @cart_items.each do |cart_item| %>
+  <%  @subtotal += (cart_item.product.price * cart_item.product_number) %>
+<% end %>
+<p>小計　¥<%= @subtotal %></p>
+<p>税   ¥<%= @subtotal * 0.08 %></p>
+<p>配送料   ¥<%= 500 %></p>
+<p>合計 ¥<%= @subtotal * 1.08 + 500  %></p>
+
+<%= order_history.submit "注文最終画面へ" %>
+<% end %>
