--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,7 +5,7 @@
 		<% @products.each do |product| %>
 		<tr>
 			<% if product.product_status == "on_sale" %>
-			    <td><%= image_tag product.image_id.to_s %></td> <!-- carierwaveの画像を表示  -->
+			    <td><%= image_tag product.image_id.url %></td> <!-- carierwaveの画像を表示  -->
 			<% else %>
 			    <td><%= image_tag "sold_out.jpg", size: "200x200" %></td>
 			<% end %>
@@ -16,8 +16,9 @@
 			    <td><span>販売停止中</span></td>
 			<% end %>
 			<td><%= product.cd_name %></td>
-			<td><%= product.artist.artist_name %></td>
-			<td><%= product.label.label_name %></td>
+			
+			<td><%= product.is_deleted %></td>
+			<td><%=link_to "在庫追加", new_arrival_history_path(product.id) %></td>
 		</tr>
 		<% end %>
 
