--- a/app/views/end_users/registrations/confirm.html.erb
+++ b/app/views/end_users/registrations/confirm.html.erb
@@ -1,21 +1,82 @@
-<%= form_for @end_user, url: {action: "complete"} do |f| %>
-  <%= devise_error_messages! %>
-  <div class="field">
-    <%= f.label :email %>
-    <%= f.hidden_field :email %>
-    <%= @end_user.email %>
-  </div>
+<div style="margin: 30px 50px">
+  <h4>ご登録内容の確認</h4>
+  <%= form_for @end_user, url: {action: "complete"} do |f| %>
+    <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :password %>
-    <%= f.hidden_field :password %>
-    <%= @end_user.password %>
-  </div>
+    <div class="field signup_contents_name">
+      <p style="display: inline-block; margin-right: 50px">名前</p>
+      <div style="display: inline-block">
+        <%= f.label :last_name_kanji, "(姓)" %><br />
+        <%= f.hidden_field :last_name_kanji, autofocus: true %>
+        <%= @end_user.last_name_kanji %>
+      </div>
+      <div style="display: inline-block">
+        <%= f.label :first_name_kanji, "(名)" %><br />
+        <%= f.hidden_field :first_name_kanji %>
+        <%= @end_user.first_name_kanji %>
+      </div>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+    <div class="field signup_contents_name">
+      <p style="display: inline-block; margin-right: 50px">名前(カナ)</p>
+      <div style="display: inline-block">
+        <%= f.label :last_name_katakana, "(セイ)" %><br />
+        <%= f.hidden_field :last_name_katakana, autofocus: true %>
+        <%= @end_user.last_name_katakana %>
+      </div>
+      <div style="display: inline-block">
+        <%= f.label :first_name_katakana, "(メイ)" %><br />
+        <%= f.hidden_field :first_name_katakana %>
+        <%= @end_user.first_name_katakana %>
+      </div>
+    </div>
 
-<% end %>
+    <div class="field">
+      <%= f.label :email, "メールアドレス" %>
+      <%= f.hidden_field :email %>
+      <%= @end_user.email %>
+    </div>
 
-<%= render "devise/shared/links" %>
+    <div class="field">
+      <%= f.label :password, "パスワード" %>
+      <%= f.hidden_field :password %>
+      <%=  "●" * @end_user.password.length %>
+    </div>
+
+    <%= f.fields_for :addresses, @address do |address| %>
+        <div>
+          <p style="display: inline-block; margin-right: 25px">郵便番号</p>
+          <div style="display: inline-block">
+            <%= address.label :postal_code_1 %>
+            <%= address.hidden_field :postal_code_1 %>
+            <%= @address.postal_code_1 %>
+          </div>
+          <div style="display: inline-block">
+            <%= address.label :postal_code_2 %>
+            <%= address.hidden_field :postal_code_2 %>
+            <%= @address.postal_code_2 %>
+          </div>
+        </div>
+        <div class="field signup_contents">
+          <%= address.label :address, "住所" %>
+          <%= address.hidden_field :address %>
+          <%= @address.address %>
+        </div>
+        <div class="field signup_contents">
+          <%= address.label :telephone_number, "電話番号" %>
+          <%= address.hidden_field :telephone_number %>
+          <%= @address.telephone_number %>
+        </div>
+
+            <%= address.hidden_field :last_name, :value => @address.end_user.last_name_kanji %>
+
+            <%= address.hidden_field :first_name, :value => @address.end_user.first_name_kanji %>
+            <%= address.hidden_field :is_main, :value => 1 %>
+      <% end %>
+
+    <div class="actions">
+      <%= f.submit "完了", :class => "btn btn-primary" %>
+    </div>
+
+  <% end %>
+</div>
