--- a/app/views/end_users/registrations/edit.html.erb
+++ b/app/views/end_users/registrations/edit.html.erb
@@ -1,10 +1,34 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>会員情報編集 <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
+  <div class="field signup_contents_name">
+    <p style="display: inline-block; margin-right: 25px">名前</p>
+    <div style="display: inline-block">
+      <%= f.label :last_name_kanji, "(姓)" %><br />
+      <%= f.text_field :last_name_kanji, autofocus: true %>
+    </div>
+    <div style="display: inline-block">
+      <%= f.label :first_name_kanji, "(名)" %><br />
+      <%= f.text_field :first_name_kanji %>
+    </div>
+  </div>
+
+  <div class="field signup_contents_name">
+    <p style="display: inline-block; margin-right: 25px">名前(カナ)</p>
+    <div style="display: inline-block">
+      <%= f.label :last_name_katakana, "(セイ)" %><br />
+      <%= f.text_field :last_name_katakana, autofocus: true %>
+    </div>
+    <div style="display: inline-block">
+      <%= f.label :first_name_katakana, "(メイ)" %><br />
+      <%= f.text_field :first_name_katakana %>
+    </div>
+  </div>
+
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email, "メールアドレス" %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
@@ -30,6 +54,29 @@
     <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
+
+    <%= f.fields_for :addresses, @address do |address| %>
+      <div>
+        <p style="display: inline-block; margin-right: 25px">郵便番号</p>
+        <div style="display: inline-block">
+          <%= address.label :postal_code_1 %>
+          <%= address.text_field :postal_code_1 %>
+        </div>
+        <div style="display: inline-block">
+          <%= address.label :postal_code_2 %>
+          <%= address.text_field :postal_code_2 %>
+        </div>
+      </div>
+      <div class="field signup_contents">
+        <%= address.label :address, "住所" %>
+        <%= address.text_field :address %>
+      </div>
+      <div class="field signup_contents">
+        <%= address.label :telephone_number, "電話番号" %>
+        <%= address.text_field :telephone_number %>
+      </div>
+    <% end %>
+
 
   <div class="actions">
     <%= f.submit "Update" %>
