--- a/app/views/cart_items/index.html.erb
+++ b/app/views/cart_items/index.html.erb
@@ -12,9 +12,7 @@
 				                <% end %>
 				            </td>
 				            <td>
-				              	<% @products.each do |product| %>
-									<h2><%= product.cd_name %></h2>
-						  		<% end %>
+								<h2><%= product.cd_name %></h2>
 						  	</td>
 				            <td>数量
 					   			<select name="quantity">
@@ -25,7 +23,7 @@
 								<option value="5">5</option>
 							    </select>
 							</td>
-							<td><%= link_to '削除', cart_items_path(@user.id), %></td>
+							<td><%= link_to '削除', cart_items_path(@user.id) %></td>
 							<td>
 								<% @products.each do |product| %>
 								<P>価格</P>
