--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,50 +1,50 @@
-	<div class="container">
+　	<div class="container">
 		<div class="row">
 			<div class="col-xs-5">
-				<%= image_tag @product.image_id.url %>
+				<%= image_tag @product.image_id.url, size:'300x300' %>
 			</div>
 			<div class="col-xs-7">
-				<tbody>
-					<tr>
-					<% @products.each do |product| %>
-						<td><%= product.cd_name %></td>
+					<div>
+						<%= @product.cd_name %>
+					</div><br>
+					<div>
+						<%= @product.label.label_name %>
+					<div><br>
+						￥<%= @product.price %>（税込価格）
+					</div>
+				<br>
 
-						<td><%= product.product_status %></td>
-						<td><%= product.price %></td>
-					</tr>
-					<% end %>
-				</tbody>
-
-			    <span class="quick-drop">
-		          <option value="1">1</option>
-		          <option value="2">2</option>
-		          <option value="3">3</option>
-		          <option value="4">4</option>
-		          <option value="5">5</option>
-		          <option value="6">6</option>
-		          <option value="7">7</option>
-		          <option value="8">8</option>
-		          <option value="9">9</option>
-		          <option value="10">10</option>
-	        	</span>
+				<div>
+				<select name="数量" required>
+		          	<option value="1" selected="true">1</option>
+			        <option value="2">2</option>
+			        <option value="3">3</option>
+			        <option value="4">4</option>
+			        <option value="5">5</option>
+			        <option value="6">6</option>
+			        <option value="7">7</option>
+			        <option value="8">8</option>
+			        <option value="9">9</option>
+			        <option value="10">10</option>
+				</select>
+				</div><br>
 
 	        	<div class="btn-area">
 		        	<%= link_to 'カートへ入れる', cart_items_path, class:"btn btn-warning" %>
 				</div>
 
-	<div class="container">
 		<div class="row">
 			<div class="col-xs-12">
-				<% @product.discs.each do |disc| %>
+				<% @product.disks.each do |disk| %>
 					<table class="table table-striped">
 						<thead>
 							<tr>
-								<th><%= "ディスク" + disc.id.to_s %></th>
+								<th><%= "ディスク" + disk.id.to_s %></th>
 							</tr>
 						</thead>
 						<tbody>
 							<tr>
-								<% disc.songs.each do |song| %>
+								<% disk.songs.each do |song| %>
 									<td><%= song.song_name %></td>
 								<% end %>
 							</tr>
@@ -52,5 +52,3 @@
 					</table>
 				<% end %>
 			</div>
-		</div>
-
