--- a/app/views/shared/_header_admin_after_login.html.erb
+++ b/app/views/shared/_header_admin_after_login.html.erb
@@ -12,7 +12,7 @@
 			   <div class="col-xs-3"><%= link_to "注文依頼", "#" %></div>
 			   <div class="col-xs-3"><%= link_to "入荷履歴", "#" %></div>
 		       <div class="col-xs-3"><%= link_to "新規商品追加", "#" %></div>
-		       <div class="col-xs-3"><%= link_to "問い合わせ", "#" %></div>
+		       <div class="col-xs-3"><%= link_to "問い合わせ",  %></div>
 		    </div>
 		</div>
 		<div class="row">
