--- a/app/views/arrival_histories/index.html.erb
+++ b/app/views/arrival_histories/index.html.erb
@@ -1,1 +1,19 @@
-<h1</h1>
+<table class="table">
+  <tbody>
+    <tr>
+      <td>
+        <p> 商品名</p>
+      </td>
+        <td>
+          <%=link_to book_path(@book.id) do %>
+          <%= @book.title %>
+          <% end %>
+        </td>
+        <td><%= @book.body %></td>
+        <% if @book.user == current_user %>
+          <td><%= link_to 'Edit', edit_book_path(@book.id), class:"btn-sm btn-success" %></td>
+          <td><%= link_to 'Destroy', book_path(@book.id), class:"btn-sm btn-danger", method: :delete, "data-confirm" => "本当に消しますか？" %></td>
+        <% end %>
+    </tr>
+  </tbody>
+</table>
