--- a/app/views/cart_items/index.html.erb
+++ b/app/views/cart_items/index.html.erb
@@ -12,7 +12,7 @@
 				                <% end %>
 				            </td>
 				            <td>
-								<h2><%= product.cd_name %></h2>
+								<h2><%= @product.cd_name %></h2>
 						  	</td>
 				            <td>数量
 					   			<select name="quantity">
